# sudoku

./: README.md
boards/: board8-evil.txt  board_mum1.txt
cpp-sudoku/: .gitignore  CMakeLists.txt  README.md  test.cpp
cpp-sudoku/atari-build/: Makefile  README.md
cpp-sudoku/src/: Sudoku.cpp  Sudoku.hpp  hello.cpp  hello.hpp  main.cpp  main.hpp
cpp-sudoku/test/: SudokuTest.cpp  test.cpp
kotlin-sudoku/: board2.txt  build.gradle.kts  settings.gradle.kts
kotlin-sudoku/src/main/kotlin/: Board.kt  Main.kt
kotlin-sudoku/src/test/kotlin/: BoardTest.kt
kotlin-sujiko/: settings.gradle.kts
kotlin-sujiko/src/main/kotlin/: Main.kt
